shedos-screensaver/crates/shedos-screensaver-styles/tests/snapshots/snapshot__snapshot_matrix.snap
---
source: crates/shedos-screensaver-styles/tests/snapshot.rs
expression: "run_n_frames(\"matrix\", 5)"
---
--- frame 0 (t=0ms) ---
                     ン     ヒ       ホ           ヲ   ロ        
                                                            
                                                            
      ███████ ██   ██ ███████ ██████  ██████  ███████       
      ██      ██   ██ ██      ██   ██ ██   ██ ██            
      ███████ ███████ █████   ██   ██ ██   ██ ███████       
      ██ ██   ██ ██      ██   ██ ██   ██      ██            
      ███████ ██   ██ ███████ ██████  ██████  ███████       
                                                            
                                                            
                                                            
                                                            
--- frame 1 (t=33ms) ---
   ナト  ル ツ           マ  フ  チ       リ           シ   ム サ  ア  キ
                     ト                                      
                                                            
      ███████ ██   ██ ███████ ██████  ██████  ███████       
      ██      ██   ██ ██      ██   ██ ██   ██ ██            
      ███████ ███████ █████   ██   ██ ██   ██ ███████       
      ██ ██   ██ ██      ██   ██ ██   ██      ██            
      ███████ ██   ██ ███████ ██████  ██████  ███████       
                                                            
                                                            
                                                            
                                                            
--- frame 2 (t=66ms) ---
   ハタ  オ ク       ヤ   レ  ワ  ヒ      ヒレ           ノ   リ ロア ユ  ヤ
   トヤ    ウ           ヒ  フ          チ           キ   ヲ ユ  エ  コ
                     ト                                      
      ███████ ██   ██ ███████ ██████  ██████  ███████       
      ██      ██   ██ ██      ██   ██ ██   ██ ██            
      ███████ ███████ █████   ██   ██ ██   ██ ███████       
      ██ ██   ██ ██      ██   ██ ██   ██      ██            
      ███████ ██   ██ ███████ ██████  ██████  ███████       
                                                            
                                                            
                                                            
                                                            
--- frame 3 (t=99ms) ---
   サエ  ネ ハ       メ   チ  ハ  エ      カコ           ヨ   ツ コテ ネオ ホ
   ナテ  ソ レ           ユ  ノ  ホ       ノ           ワ   ソ ヒリ メ  カ
    ノ    ス           ヌ                               ハ  ケ  ヒ
      ███████ ██   ██ノ███████ ██████  ██████  ███████       
      ██      ██   ██ ██      ██   ██ ██   ██ ██            
      ███████ ███████ █████   ██   ██ ██   ██ ███████       
      ██ ██   ██ ██      ██   ██ ██   ██      ██            
      ███████ ██   ██ ███████ ██████  ██████  ███████       
                                                            
                                                            
                                                            
                                                            
--- frame 4 (t=132ms) ---
   ヘク  リ ミ       ハ   ア  ネ  ヤ      ヲイ  ノ      ク ケ   ル イネ ナオ ケ
   ヘカ  ウ ソ       ヌ   タ  ワ  ワ      ニク           ヨ   サ ヲコ レテ ム
   ヤユ    タ           ワ  モ          ラ                 ユチ オ  ム
    ミ ███ヘ███ ██   ██コ███████ ██████  ██████  ███████ヌ  テ  ネ
      ██      ██   ██ミ██      ██   ██ ██   ██ ██            
      ███████ ███████ █████   ██   ██ ██   ██ ███████       
      ██ ██   ██ ██      ██   ██ ██   ██      ██            
      ███████ ██   ██ ███████ ██████  ██████  ███████
