shedos-screensaver/crates/shedos-screensaver-styles/tests/snapshots/snapshot__snapshot_tunnel.snap
---
source: crates/shedos-screensaver-styles/tests/snapshot.rs
expression: "run_n_frames(\"tunnel\", 5)"
---
--- frame 0 (t=0ms) ---
█    ▒ █           ▓     █         █     ▓           █ ▒    
      ▓        ▒ ▒                         ▒ ▒        ▓     
  █    ▓      ▓       █     ▓   ▓     █       ▓      ▓    █ 
   ▓  ███████▒██   ██ ███████ ██████  ██████ ████████    ▓  
 ▓    ██   █  ███  ██▓██   ▓  ██ ▓ ██ ██   ██ ██ █    █    ▓
    ▒ ███████ ███████ █████   ██   ██ ██   ██ ███████   ▒   
    ▓ ██ ██ ▒ ██ ██      ██   ██ ██▓  ██   █  ██▒       ▓   
    ▒ ███████ ██ ▒ ██ ███████ ██████  ██████  ███████   ▒   
 ▓    █    █    █    ▓     ▓     ▓     ▓    █    █    █    ▓
   ▓    ▓    ▒ █           ▒     ▒           █ ▒    ▓    ▓  
  █    ▓      ▓       █     ▓   ▓     █       ▓      ▓    █ 
      ▓        ▒ ▒                         ▒ ▒        ▓     
--- frame 1 (t=33ms) ---
   ▒ █               ▒  ▒           ▒  ▒               █ ▒  
    ▓      ▒ ▓ █ █ █    ▓    ▓█▓    ▓    █ █ █ ▓ ▒      ▓   
▓    ▓      █           █  ▒     ▒  █           █      ▓    
      ██████████  ▒██ ███████ ██████▓ ██████  ███████       
    ▒ ██ ▓    ██   ██ ██      ██   ██ ██ ▓ ██ ██   ▓    ▒   
    █ ███████ ███████ █████▓  ██ ▓ ██ ██   ██ ███████▒  █   
      ██ ██ █ ██ ██ █    ██ ▓ ██▓██   ███    ▒███    ▓      
    █ ███████ ██ █ ██ ███████ ██████  ██████  ███████▒  █   
    ▒    ▓    ▓    ▓                     ▓    ▓    ▓    ▒   
             █    ▒ ▓ █ ▓  █     █  ▓ █ ▓ ▒    █            
▓    ▓      █           █  ▒     ▒  █           █      ▓    
    ▓      ▒ ▓ █ █ █    ▓    ▓█▓    ▓    █ █ █ ▓ ▒      ▓   
--- frame 2 (t=66ms) ---
 ▒ █      ▒ ▒ ▓ ▒    █  █     ▒     █  █    ▒ ▓ ▒ ▒      █ ▒
  ▒      ▒ █         █      █   █      █         █ ▒      ▒ 
   ▒      █        ▒       █     █       ▒        █      ▒  
 █    ███████ ██▒ ███ ███████ ██████  ██████▒ ███████ █    █
    █ ██    ▒ ██ ▒ ██ ██      ██   ██ ██   ██ ██▒       █   
  ▓   ███████ ███████ █████  ▓██   ██ ███  ██▓████████    ▓ 
  █   ██ ██   ██ ██    █ ██   ██ ██  ███  ▒  ███  ▓       █ 
  ▓   ███████ ██   ██ ███████▓██████  ██████ ▓████████    ▓ 
    █       ▒    ▒                         ▒    ▒       █   
 █    █    █    ▒ █                       █ ▒    █    █    █
   ▒      █        ▒       █     █       ▒        █      ▒  
  ▒      ▒ █         █      █   █      █         █ ▒      ▒ 
--- frame 3 (t=99ms) ---
 █      ▓ █     █ ▓         ▒███▒         ▓ █     █ ▓      █
▒ █    ▒ █             ▒   █     █   ▒             █ ▒    █ 
   █    ▓      ▒ █ █ █    ▒       ▒    █ █ █ ▒      ▓    █  
    ▓ ███████ ███  ██ ███████ ██████  ███████ ███████   ▓   
  ▓   ██    █ ██ █ ██ ███ ▓  ▒██  ▓██ ██   ██ ███    █    ▓ 
     ▒███████ ███████ █████   ██   ██▓██  ▒██ ███████  ▒    
▒    ▓██ ██  ▒██ ██  ▒   ██   ██ ██   ██  █   ██       ▓    
     ▒███████ ██  ▒██ ███████ ██████ ▓██████  ███████  ▒    
  ▓    █    █    █    ▒ █ ▓  ▒▓▒  ▓ █ ▒    █    █    █    ▓ 
    ▓    ▓      █         █       █         █      ▓    ▓   
   █    ▓      ▒ █ █ █    ▒       ▒    █ █ █ ▒      ▓    █  
▒ █    ▒ █             ▒   █     █   ▒             █ ▒    █ 
--- frame 4 (t=132ms) ---
      ▓             ▒  █   ▒█   █▒   █  ▒             ▓     
█    ▒        ▒ ▓ ▒    █  ▒       ▒  █    ▒ ▓ ▒        ▒    
 ▓    ▒      ▓         █  █       █  █         ▓      ▒    ▓
      ███████ ██   ██▒███████ ██████ ▒██████  ███████       
     ▒██  ▓   ██   ██ ██     ███   ██ ██▒  ██▓██  ▓    ▒    
▓     ███████████████▒█████   ██   ██ ██  ███ ███████       
█     ██▓██   ██▒██  █   ██  ▓██ ██   ██    ▒ ██    ▓       
▓     ██████████  ███▒███████ ██████  ██████  ███████       
     ▒    ▓    ▓    ▒ █      █ █      █ ▒    ▓    ▓    ▒    
              █      ▒ ▒             ▒ ▒      █             
 ▓    ▒      ▓         █  █       █  █         ▓      ▒    ▓
█    ▒        ▒ ▓ ▒    █  ▒       ▒  █    ▒ ▓ ▒        ▒
